# xiaozhi-bridge

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile.bridge  Dockerfile.web  LICENSE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  release.yml
bridge/: README.md  conftest.py  pyproject.toml
bridge/src/xiaozhi_bridge/: __init__.py  __main__.py  config.py  main.py  server.py
bridge/src/xiaozhi_bridge/api/: __init__.py  __main__.py  db.py  main.py
bridge/src/xiaozhi_bridge/asr/: __init__.py  base.py  cloud.py  mock.py  sensevoice.py  sherpa_onnx.py
bridge/src/xiaozhi_bridge/audio/: __init__.py  handler.py
bridge/src/xiaozhi_bridge/handle/: __init__.py  textMessageHandler.py  textMessageHandlerRegistry.py  textMessageProcessor.py
bridge/src/xiaozhi_bridge/handle/textHandler/: __init__.py  abortMessageHandler.py  helloMessageHandler.py  listenMessageHandler.py  mcpMessageHandler.py
bridge/src/xiaozhi_bridge/llm/: __init__.py  base.py  openclaw.py  prompts.py
bridge/src/xiaozhi_bridge/mcp/: __init__.py  client.py  handlers.py  manager.py  server.py  tools.py
bridge/src/xiaozhi_bridge/pipeline/: __init__.py  tts.py  turn.py
bridge/src/xiaozhi_bridge/protocol/: __init__.py  audio.py  messages.py  states.py
bridge/src/xiaozhi_bridge/tts/: __init__.py  base.py  cloud.py  edge.py  mock.py
bridge/src/xiaozhi_bridge/utils/: logging.py
bridge/src/xiaozhi_bridge/vad/: __init__.py  base.py  silero.py
bridge/tests/: __init__.py  test_api.py  test_asr_tts.py  test_config.py  test_db.py  test_llm_tool_use.py  test_mcp.py  test_mcp_v27.py  test_mcp_v27_e2e.py  test_mcp_v27_session_cleanup.py  test_openclaw_live.py  test_ota.py  test_pipeline.py  test_protocol.py  test_server_auth.py  test_session_cleanup.py  test_tts_edge.py  test_v2_13_modules.py  test_vad.py
bridge/tests/scripts/: test_enable_auth.sh
config/: config.example.yaml  openclaw.json.example
deploy/: Caddyfile  Caddyfile.dev  iptables-restore.service
deploy/scripts/: install.sh  update.sh
deploy/systemd/: xiaozhi-bridge.service  xiaozhi-web.service
docs/: api.md  architecture.md  asr_models.md  changelog.md  config.md  deployment-docker.md  deployment.md  protocol.md  refactor-v2.13-modules.md  v1-release-notes.md
scripts/: e2e_smoke.py  enable_auth_for_device.sh  install_iptables_persist.sh  v2_1_asr_smoke.py
web/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: Sidebar.tsx  Topbar.tsx
web/src/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx
web/src/lib/: api.ts  store.ts  useApi.ts  utils.ts
web/src/pages/: Conversations.tsx  Dashboard.tsx  Devices.tsx  Iot.tsx  Logs.tsx  Settings.tsx
