[project]
name = "xiaozhi-bridge"
version = "0.2.0"
description = "Lightweight WebSocket bridge for xiaozhi-esp32 devices, with openclaw + M3 as the LLM brain."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Allen", email = "allen@example.com" },
    { name = "Jarvis", email = "jarvis@example.com" },
]
keywords = ["xiaozhi", "esp32", "websocket", "openclaw", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

# --- V1 + V2 dependencies (all used by running code) ---
dependencies = [
    "websockets>=13.0",         # WebSocket server
    "pydantic>=2.7",            # Message models + config
    "pydantic-settings>=2.4",   # env-var override (XIAOZHI_*__*)
    "pyyaml>=6.0",              # config.yaml
    "opuslib>=3.0",             # Opus codec (audio in/out)
    "httpx>=0.27",              # openclaw client (async)
    "structlog>=24.4",          # JSON/console structured logging
    "fastapi>=0.115",           # /api/* HTTP layer (V2 #3)
    "uvicorn[standard]>=0.30",  # ASGI server (V2 #3)
    "aiosqlite>=0.20",          # conversation persistence (V2 #3)
]

# --- Future (V2 / V3) dependencies (NOT installed yet) ---
# Add when needed:
#   "PyJWT>=2.9",             # auth tokens for /api/* (V2 #3 follow-up)
#   "python-multipart>=0.0.9",# form parsing
#   "edge-tts>=6.1",          # real TTS (V2 #2)
#   "funasr-onnx>=0.3",       # local ASR (V2 #1) or sherpa-onnx / aliyun
#   "aiohttp>=3.10",          # only if you want a WS proxy inside /api/*

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML",
]

[project.scripts]
xiaozhi-bridge = "xiaozhi_bridge.main:main"

[project.urls]
Homepage = "https://github.com/hqgaofeng/xiaozhi-bridge"
Documentation = "https://github.com/hqgaofeng/xiaozhi-bridge/tree/main/docs"
Issues = "https://github.com/hqgaofeng/xiaozhi-bridge/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xiaozhi_bridge"]

# --- Tooling ---

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]  # line-length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = false  # 暂时不强制，等稳定再开

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
