[project]
name = "xiaozhi-bridge"
version = "0.2.5"
description = "Lightweight WebSocket bridge for xiaozhi-esp32 devices, with openclaw + M3 as the LLM brain."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Allen", email = "allen@example.com" },
    { name = "Jarvis", email = "jarvis@example.com" },
]
keywords = ["xiaozhi", "esp32", "websocket", "openclaw", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

# --- V1 + V2 dependencies (all used by running code) ---
dependencies = [
    "websockets>=13.0",         # WebSocket server
    "pydantic>=2.7",            # Message models + config
    "pydantic-settings>=2.4",   # env-var override (XIAOZHI_*__*)
    "pyyaml>=6.0",              # config.yaml
    "opuslib>=3.0",             # Opus codec (audio in/out)
    "httpx>=0.27",              # openclaw client (async)
    "structlog>=24.4",          # JSON/console structured logging
    "fastapi>=0.115",           # /api/* HTTP layer (V2 #3)
    "uvicorn[standard]>=0.30",  # ASGI server (V2 #3)
    "aiosqlite>=0.20",          # conversation persistence (V2 #3)
    "sherpa-onnx>=1.10",        # local ASR (V2 #1) — streaming-zipformer-bilingual ONNX
    "edge-tts>=6.1",           # Microsoft Edge TTS client (V2 #2) — free neural voices
    "pydub>=0.25",             # mp3 → PCM decoder (V2 #2) — wraps ffmpeg
]

# --- Future (V2 / V3) dependencies (NOT installed yet) ---
# Add when needed:
#   "PyJWT>=2.9",             # auth tokens for /api/* (V2 #3 follow-up)
#   "python-multipart>=0.0.9",# form parsing
#   "aiohttp>=3.10",          # only if you want a WS proxy inside /api/*

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML",
]

[project.scripts]
xiaozhi-bridge = "xiaozhi_bridge.main:main"

[project.urls]
Homepage = "https://github.com/hqgaofeng/xiaozhi-bridge"
Documentation = "https://github.com/hqgaofeng/xiaozhi-bridge/tree/main/docs"
Issues = "https://github.com/hqgaofeng/xiaozhi-bridge/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xiaozhi_bridge"]

# --- Tooling ---

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF"]
# 中文标点在中文项目里是合法的——RUF001（字符串里的全角）
# 和 RUF003（注释里的全角）我们不在乎。RUF002（docstring
# 里的全角）例外——docstring 一定半角。
ignore = [
    "E501",   # line-length handled by formatter
    "RUF001", # string contains fullwidth punctuation (intentional in zh docs)
    "RUF003", # comment contains fullwidth punctuation (intentional in zh comments)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM"]

[tool.mypy]
python_version = "3.12"
# V1 code was never type-checked under strict; we turned on strict
# in v0.1.5 cleanup but the actual V1 source still has 58
# annotation gaps. Rather than lie about strict in CI, we run
# mypy in a "best effort" mode and treat it as a guideline
# instead of a gate. New code (V2+) should still aim for full
# annotations; this is a workaround, not a permanent setting.
strict = false
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
# Disable rules that fire on V1 code patterns we intentionally keep:
#   - call-arg: stdlib logging.Logger doesn't accept structlog-style
#               kwargs (log.info("event", key=val)); V1 mixed both.
#   - unused-ignore: `# type: ignore` is needed in CI (no opuslib
#               installed) but mypy on dev machines with opuslib
#               installed thinks the comment is unnecessary.
#   - arg-type / attr-defined: misc library-typing mismatches.
# V2 #4+ should aim to remove these gradually as files are rewritten.
disable_error_code = [
    "call-arg",
    "unused-ignore",
    "arg-type",
    "attr-defined",
    "misc",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
